SQL update : number of days to update can now be precised as argument

--- a/notebooks/mysql_update_from_weatherAPI.ipynb
+++ b/notebooks/mysql_update_from_weatherAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "0f3722a0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "1fbfed4c",
    "metadata": {},
    "outputs": [],
@@ -74,15 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "53ee6466",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_7days_weatherapi_history(station_id,station_coord):\n",
+    "def get_weatherapi_history(nb_of_day,station_id,station_coord):\n",
     "    \n",
-    "    # 7 Past Days to check\n",
-    "    days = [ date.today() - timedelta(delta) for delta in range(7,0,-1) ]\n",
+    "    # Past Days to check\n",
+    "    days = [ date.today() - timedelta(delta) for delta in range(nb_of_day,0,-1) ]\n",
     "    \n",
     "    dt=days[0].strftime('%Y-%m-%d')\n",
     "    end_dt=days[-1].strftime('%Y-%m-%d')\n",
@@ -130,15 +130,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "6e90dbe3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sql_known_7days(station_id):\n",
+    "def get_sql_known_days(nb_of_days,station_id):\n",
+    "    \"\"\"\n",
+    "    nb_of_days : number of days to check in the db\n",
+    "    station_id : the id of the concerned station\n",
+    "    \"\"\"\n",
     "    \n",
-    "    # 7 Past Days to check\n",
-    "    days = [ date.today() - timedelta(delta) for delta in range(7,0,-1) ]\n",
+    "    # Past Days to check\n",
+    "    days = [ date.today() - timedelta(delta) for delta in range(nb_of_days,0,-1) ]\n",
     "    \n",
     "    days = [ d.strftime(\"%Y-%m-%d\") for d in days ] # string conversion\n",
     "\n",
@@ -147,7 +151,7 @@
     "                WHERE station_id = :st_id AND day BETWEEN :first_day AND :last_day ;\n",
     "            \"\"\"\n",
     "\n",
-    "    params = { 'st_id':st_id, 'first_day':days[0], 'last_day':days[-1] }\n",
+    "    params = { 'st_id':station_id, 'first_day':days[0], 'last_day':days[-1] }\n",
     "\n",
     "    with engine.connect() as conn:\n",
     "        result = conn.execute(text(query),params)\n",
@@ -167,12 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "9f8dc735",
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_sql_station(station_id,history,known_days):\n",
+    "    \"\"\"\n",
+    "    station_id : the id of the concerned station\n",
+    "    history : the weather history from weatherAPI\n",
+    "    known_days : list of days not to update, already in the DB\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Computes the unknown history dataframe\n",
     "    unknown_bi = ~history['day'].isin(known_days) # == day not in known_days\n",
@@ -193,45 +202,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "id": "35d7f14e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Station 6000990 : 7/7 days on the SQL DB\n",
-      "Station 6000998 : 7/7 days on the SQL DB\n",
-      "Station 6000993 : 7/7 days on the SQL DB\n",
-      "Station 6001000 : 7/7 days on the SQL DB\n",
-      "Station 6003600 : 7/7 days on the SQL DB\n",
-      "Station 6002500 : 7/7 days on the SQL DB\n",
-      "Station 6005500 : 7/7 days on the SQL DB\n",
-      "Station 6011000 : 7/7 days on the SQL DB\n",
-      "Station 6017050 : 7/7 days on the SQL DB\n",
-      "Station 6017070 : 7/7 days on the SQL DB\n",
-      "Station 6039500 : 7/7 days on the SQL DB\n",
-      "Station 6037400 : 7/7 days on the SQL DB\n",
-      "Station 6053800 : 7/7 days on the SQL DB\n",
-      "Station 6045800 : 7/7 days on the SQL DB\n",
-      "Station 6810010 : 7/7 days on the SQL DB\n",
-      "Station 6059500 : 7/7 days on the SQL DB\n"
+      "Station 6000990 : 25/25 days on the SQL DB\n",
+      "Station 6000998 : 25/25 days on the SQL DB\n",
+      "Station 6000993 : 25/25 days on the SQL DB\n",
+      "Station 6001000 : 25/25 days on the SQL DB\n",
+      "Station 6003600 : 25/25 days on the SQL DB\n",
+      "Station 6002500 : 25/25 days on the SQL DB\n",
+      "Station 6005500 : 25/25 days on the SQL DB\n",
+      "Station 6011000 : 25/25 days on the SQL DB\n",
+      "Station 6017050 : 25/25 days on the SQL DB\n",
+      "Station 6017070 : 25/25 days on the SQL DB\n",
+      "Station 6039500 : 25/25 days on the SQL DB\n",
+      "Station 6037400 : 25/25 days on the SQL DB\n",
+      "Station 6053800 : 25/25 days on the SQL DB\n",
+      "Station 6045800 : 25/25 days on the SQL DB\n",
+      "Station 6810010 : 25/25 days on the SQL DB\n",
+      "Station 6059500 : 25/25 days on the SQL DB\n"
      ]
     }
    ],
    "source": [
     "for station_id in stations.index :\n",
+    "    \n",
+    "    nb_of_days = 25 # We check and update the last 25 days\n",
     "\n",
     "    station_coord = f\"{stations.loc[station_id,'lat']},{stations.loc[station_id,'lon']}\"\n",
     "\n",
-    "    known_days = get_sql_known_7days(station_id)\n",
-    "    print(f'Station {station_id} : {len(known_days)}/7 days on the SQL DB')\n",
+    "    known_days = get_sql_known_days(nb_of_days,station_id)\n",
+    "    print(f'Station {station_id} : {len(known_days)}/{nb_of_days} days on the SQL DB')\n",
     "\n",
-    "    if len(known_days) < 7 :\n",
+    "    if len(known_days) < nb_of_days :\n",
     "\n",
     "        print(15*' ' + 'requesting Weather API...',end='')\n",
-    "        history = get_7days_weatherapi_history(station_id,station_coord)\n",
+    "        history = get_weatherapi_history(nb_of_days,station_id,station_coord)\n",
     "        print('done')\n",
     "\n",
     "        print(15*' ' + 'Updating SQL table...',end='')\n",
