Base GCP Functions and Scheduler architecture completed

--- a/notebooks/mysql_update_from_weatherAPI.ipynb
+++ b/notebooks/mysql_update_from_weatherAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "0f3722a0",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "1fbfed4c",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "53ee6466",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "6e90dbe3",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "9f8dc735",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "35d7f14e",
    "metadata": {
     "scrolled": false
@@ -212,22 +212,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Station 6000990 : 25/25 days on the SQL DB\n",
-      "Station 6000998 : 25/25 days on the SQL DB\n",
-      "Station 6000993 : 25/25 days on the SQL DB\n",
-      "Station 6001000 : 25/25 days on the SQL DB\n",
-      "Station 6003600 : 25/25 days on the SQL DB\n",
-      "Station 6002500 : 25/25 days on the SQL DB\n",
-      "Station 6005500 : 25/25 days on the SQL DB\n",
-      "Station 6011000 : 25/25 days on the SQL DB\n",
-      "Station 6017050 : 25/25 days on the SQL DB\n",
-      "Station 6017070 : 25/25 days on the SQL DB\n",
-      "Station 6039500 : 25/25 days on the SQL DB\n",
-      "Station 6037400 : 25/25 days on the SQL DB\n",
-      "Station 6053800 : 25/25 days on the SQL DB\n",
-      "Station 6045800 : 25/25 days on the SQL DB\n",
-      "Station 6810010 : 25/25 days on the SQL DB\n",
-      "Station 6059500 : 25/25 days on the SQL DB\n"
+      "Station 6000990 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6000998 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6000993 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6001000 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6003600 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6002500 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6005500 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6011000 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6017050 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6017070 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6039500 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6037400 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6053800 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6045800 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6810010 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n",
+      "Station 6059500 : 24/25 days on the SQL DB\n",
+      "               requesting Weather API...done\n",
+      "               Updating SQL table...done\n"
      ]
     }
    ],
