--- a/notebooks/nitrate_data_preparation.ipynb
+++ b/notebooks/nitrate_data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8db90017",
+   "id": "61e62ed5",
    "metadata": {},
    "source": [
     "Data extracted from http://naiades.eaufrance.fr/acces-donnees#/physicochimie  \n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84ada20b",
+   "id": "4d608174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "a262ef2c",
+   "id": "7f151457",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "f4509cf2",
+   "id": "c0fd9225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "33cf40b1",
+   "id": "a955ac5e",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "287edc26",
+   "id": "7ef219a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "5b5dad7a",
+   "id": "afc01588",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "8b60a63a",
+   "id": "f06d18ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "2869ec97",
+   "id": "a2c450ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "502e5599",
+   "id": "08b412de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "bc1e7ad1",
+   "id": "5a111c3f",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "0dba0a78",
+   "id": "6f144fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "0f82f91a",
+   "id": "a2f5ee6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "1f890471",
+   "id": "818a5e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,159 +387,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "020f06dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/sve/prj/water_sql_db/notebooks\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
-   "id": "7fd19845",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>measure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>2011-01-19</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>2011-03-23</td>\n",
-       "      <td>3.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>2011-05-17</td>\n",
-       "      <td>4.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>2011-07-20</td>\n",
-       "      <td>4.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>2011-09-21</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1942</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>2021-05-28</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1943</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>2021-06-25</td>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1944</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>2021-07-29</td>\n",
-       "      <td>7.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1945</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>2021-08-26</td>\n",
-       "      <td>7.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1946</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>2021-10-06</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1947 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      station_id       date  measure\n",
-       "0        6000990 2011-01-19      4.5\n",
-       "1        6000990 2011-03-23      3.5\n",
-       "2        6000990 2011-05-17      4.7\n",
-       "3        6000990 2011-07-20      4.1\n",
-       "4        6000990 2011-09-21      4.5\n",
-       "...          ...        ...      ...\n",
-       "1942     6810010 2021-05-28      9.0\n",
-       "1943     6810010 2021-06-25      7.8\n",
-       "1944     6810010 2021-07-29      7.4\n",
-       "1945     6810010 2021-08-26      7.8\n",
-       "1946     6810010 2021-10-06     10.0\n",
-       "\n",
-       "[1947 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nitrates.to_csv('../data/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73039dce",
+   "execution_count": 172,
+   "id": "4323c699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nitrates.to_csv('../data/nitrates/saone_2011_2021.csv')"
+   ]
   }
  ],
  "metadata": {
