date column changed to day in the csv export

--- a/notebooks/nitrate_data_preparation.ipynb
+++ b/notebooks/nitrate_data_preparation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 173,
    "id": "4d608174",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 174,
    "id": "7f151457",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 175,
    "id": "c0fd9225",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 176,
    "id": "a955ac5e",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "4        Nitrates    5.1          1      mg(NO3)/L    1.0  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 177,
    "id": "7ef219a6",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 178,
    "id": "afc01588",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 179,
    "id": "f06d18ef",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 180,
    "id": "a2c450ef",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 181,
    "id": "08b412de",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 182,
    "id": "5a111c3f",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "4                     6000990  2013-09-23  14:10:00    5.1"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 183,
    "id": "6f144fdf",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 184,
    "id": "a2f5ee6b",
    "metadata": {},
    "outputs": [],
@@ -372,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 185,
    "id": "818a5e5e",
    "metadata": {},
    "outputs": [],
    "source": [
     "column_names = [\n",
     "    'station_id',\n",
-    "    'date',\n",
+    "    'day',\n",
     "    'measure'\n",
     "]\n",
     "nitrates.columns = column_names"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 186,
    "id": "4323c699",
    "metadata": {},
    "outputs": [],
