index export changed to false in the final csv export

--- a/notebooks/nitrate_data_preparation.ipynb
+++ b/notebooks/nitrate_data_preparation.ipynb
@@ -387,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 187,
    "id": "4323c699",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nitrates.to_csv('../data/nitrates/saone_2011_2021.csv')"
+    "nitrates.to_csv('../data/nitrates/saone_2011_2021.csv',index=False)"
    ]
   }
  ],
