nitrates table created and populated

--- a/notebooks/mysql_table_creation.ipynb
+++ b/notebooks/mysql_table_creation.ipynb
@@ -16,10 +16,11 @@
     "The MySQL database is hosted on GCP\n",
     "\n",
     "**The following task are done in this Notebook :**\n",
-    "- MySQL connection setup, stations and weather tables created\n",
+    "- MySQL connection setup, stations,weather and nitrates tables created\n",
     "- weather DataFrame Loaded from '.pickle' files and reshaped\n",
     "- weather table is populated\n",
-    "- stations table populated from the csv"
+    "- stations table populated from the csv\n",
+    "- nitrates table populated from the csv"
    ]
   },
   {
@@ -45,7 +46,7 @@
     "## MySQL Setup and Table Creation\n",
     "- We use a mysql database on Google Cloud Platform\n",
     "- sqlalchemy engine is setup from variables stored in .env file\n",
-    "- We create the table"
+    "- We create the tables"
    ]
   },
   {
@@ -128,6 +129,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0e69984",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NITRATES TABLE CREATION\n",
+    "\n",
+    "create_query = \\\n",
+    "\"\"\"\n",
+    "create TABLE nitrates (\n",
+    "    day DATE NOT NULL,\n",
+    "    station_id INT NOT NULL,\n",
+    "    measure DECIMAL(4,2) NOT NULL,\n",
+    "    CONSTRAINT pk PRIMARY KEY (day,station_id)\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "with engine.connect() as conn :\n",
+    "    result = conn.execute(text(create_query))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43212764",
+   "metadata": {},
+   "source": [
+    "## Populating the nitrates table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f7be3fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nitrates = pd.read_csv('../data/nitrates/saone_2011_2021.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "44bf3e43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nitrates.to_sql('nitrates',engine,if_exists='append',index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "540523be",
    "metadata": {},
@@ -137,267 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "de5e14b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>label</th>\n",
-       "      <th>alt</th>\n",
-       "      <th>river_id</th>\n",
-       "      <th>river_label</th>\n",
-       "      <th>mean_nitrate</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6000990</td>\n",
-       "      <td>BELRUPT</td>\n",
-       "      <td>292</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>4.513699</td>\n",
-       "      <td>48.090273</td>\n",
-       "      <td>6.101941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6000998</td>\n",
-       "      <td>MONTHUREUX-SUR-SAONE 2</td>\n",
-       "      <td>241</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>6.428571</td>\n",
-       "      <td>48.018251</td>\n",
-       "      <td>5.941492</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6000993</td>\n",
-       "      <td>JONVELLE</td>\n",
-       "      <td>230</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>9.433333</td>\n",
-       "      <td>47.936380</td>\n",
-       "      <td>5.923536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6001000</td>\n",
-       "      <td>CENDRECOURT</td>\n",
-       "      <td>213</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>9.233333</td>\n",
-       "      <td>47.840261</td>\n",
-       "      <td>5.917378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6003600</td>\n",
-       "      <td>SCEY-SUR-SAONE-ET-ST-ALBI</td>\n",
-       "      <td>210</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.421519</td>\n",
-       "      <td>47.661731</td>\n",
-       "      <td>5.972460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6002500</td>\n",
-       "      <td>PORT-SUR-SAONE</td>\n",
-       "      <td>208</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>7.489474</td>\n",
-       "      <td>47.691078</td>\n",
-       "      <td>6.039292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6005500</td>\n",
-       "      <td>APREMONT 1</td>\n",
-       "      <td>190</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>10.553020</td>\n",
-       "      <td>47.395716</td>\n",
-       "      <td>5.544089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6011000</td>\n",
-       "      <td>AUXONNE 1</td>\n",
-       "      <td>185</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>10.828667</td>\n",
-       "      <td>47.194519</td>\n",
-       "      <td>5.382572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6017050</td>\n",
-       "      <td>CHARREY-SUR-SAONE</td>\n",
-       "      <td>180</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>10.831410</td>\n",
-       "      <td>47.073699</td>\n",
-       "      <td>5.165636</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6017070</td>\n",
-       "      <td>SEURRE</td>\n",
-       "      <td>179</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>10.799342</td>\n",
-       "      <td>46.996924</td>\n",
-       "      <td>5.143535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>6039500</td>\n",
-       "      <td>OUROUX-SUR-SAONE</td>\n",
-       "      <td>175</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.546309</td>\n",
-       "      <td>46.710964</td>\n",
-       "      <td>4.932136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>6037400</td>\n",
-       "      <td>GERGY</td>\n",
-       "      <td>173</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.671333</td>\n",
-       "      <td>46.878985</td>\n",
-       "      <td>4.955458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>6053800</td>\n",
-       "      <td>ST-BERNARD</td>\n",
-       "      <td>170</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.767105</td>\n",
-       "      <td>45.944114</td>\n",
-       "      <td>4.728941</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>6045800</td>\n",
-       "      <td>FLEURVILLE</td>\n",
-       "      <td>170</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.577181</td>\n",
-       "      <td>46.447797</td>\n",
-       "      <td>4.896613</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>6810010</td>\n",
-       "      <td>ST-SYMPHORIEN-D'ANCELLES</td>\n",
-       "      <td>168</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.468874</td>\n",
-       "      <td>46.187873</td>\n",
-       "      <td>4.780201</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>6059500</td>\n",
-       "      <td>LYON 1</td>\n",
-       "      <td>164</td>\n",
-       "      <td>U---0000</td>\n",
-       "      <td>La Saône</td>\n",
-       "      <td>8.835948</td>\n",
-       "      <td>45.796539</td>\n",
-       "      <td>4.831906</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    station_id                      label  alt  river_id river_label  \\\n",
-       "0      6000990                    BELRUPT  292  U---0000    La Saône   \n",
-       "1      6000998     MONTHUREUX-SUR-SAONE 2  241  U---0000    La Saône   \n",
-       "2      6000993                   JONVELLE  230  U---0000    La Saône   \n",
-       "3      6001000                CENDRECOURT  213  U---0000    La Saône   \n",
-       "4      6003600  SCEY-SUR-SAONE-ET-ST-ALBI  210  U---0000    La Saône   \n",
-       "5      6002500             PORT-SUR-SAONE  208  U---0000    La Saône   \n",
-       "6      6005500                 APREMONT 1  190  U---0000    La Saône   \n",
-       "7      6011000                  AUXONNE 1  185  U---0000    La Saône   \n",
-       "8      6017050          CHARREY-SUR-SAONE  180  U---0000    La Saône   \n",
-       "9      6017070                     SEURRE  179  U---0000    La Saône   \n",
-       "10     6039500           OUROUX-SUR-SAONE  175  U---0000    La Saône   \n",
-       "11     6037400                      GERGY  173  U---0000    La Saône   \n",
-       "12     6053800                 ST-BERNARD  170  U---0000    La Saône   \n",
-       "13     6045800                 FLEURVILLE  170  U---0000    La Saône   \n",
-       "14     6810010   ST-SYMPHORIEN-D'ANCELLES  168  U---0000    La Saône   \n",
-       "15     6059500                     LYON 1  164  U---0000    La Saône   \n",
-       "\n",
-       "    mean_nitrate        lat       lon  \n",
-       "0       4.513699  48.090273  6.101941  \n",
-       "1       6.428571  48.018251  5.941492  \n",
-       "2       9.433333  47.936380  5.923536  \n",
-       "3       9.233333  47.840261  5.917378  \n",
-       "4       8.421519  47.661731  5.972460  \n",
-       "5       7.489474  47.691078  6.039292  \n",
-       "6      10.553020  47.395716  5.544089  \n",
-       "7      10.828667  47.194519  5.382572  \n",
-       "8      10.831410  47.073699  5.165636  \n",
-       "9      10.799342  46.996924  5.143535  \n",
-       "10      8.546309  46.710964  4.932136  \n",
-       "11      8.671333  46.878985  4.955458  \n",
-       "12      8.767105  45.944114  4.728941  \n",
-       "13      8.577181  46.447797  4.896613  \n",
-       "14      8.468874  46.187873  4.780201  \n",
-       "15      8.835948  45.796539  4.831906  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "stations_df = pd.read_csv('../data/stations/stations.csv')"
+    "stations = pd.read_csv('../data/stations/stations.csv')"
    ]
   },
   {
@@ -407,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations_df.to_sql('stations',engine,if_exists='append',index=False)"
+    "stations.to_sql('stations',engine,if_exists='append',index=False)"
    ]
   },
   {
